--- a/MonoGameWindowsStarter/MonoGameWindowsStarter.csproj
+++ b/MonoGameWindowsStarter/MonoGameWindowsStarter.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Collisions.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Basket.cs" />
+    <Compile Include="Nathanbean.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
